--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,4 +17,4 @@ pico_enable_stdio_uart(test 1)
 
 pico_add_extra_outputs(test)
 
-target_link_libraries(test pico_stdlib hardware_i2c)
+target_link_libraries(test pico_stdlib hardware_i2c hardware_pwm)
